// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TitleColumn should render correctly no detail with data 1`] = `
<DocumentFragment>
  <div
    class="ins-composed-col sentry-mask data-hj-suppress"
  >
    <div>
      os_release
    </div>
    <div
      class="ins-m-nodetail"
    >
      something
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleColumn should render correctly with NO data 1`] = `
<DocumentFragment>
  <div
    class="ins-composed-col sentry-mask data-hj-suppress"
  >
    <div
      class=""
    >
      <a
        class="fakeLink"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleColumn should render correctly with data 1`] = `
<DocumentFragment>
  <div
    class="ins-composed-col sentry-mask data-hj-suppress"
  >
    <div
      class=""
    >
      <a
        class="fakeLink"
        to="testId"
      >
        something
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleColumn should render correctly with href 1`] = `
<DocumentFragment>
  <div
    class="ins-composed-col sentry-mask data-hj-suppress"
  >
    <div
      class=""
    >
      <a
        class="fakeLink"
        to="/link/to/item"
      >
        something
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleColumn should render correctly with os_release 1`] = `
<DocumentFragment>
  <div
    class="ins-composed-col sentry-mask data-hj-suppress"
  >
    <div>
      os_release
    </div>
    <div
      class=""
    >
      <a
        class="fakeLink"
        to="testId"
      >
        something
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleColumn should render correctly with to 1`] = `
<DocumentFragment>
  <div
    class="ins-composed-col sentry-mask data-hj-suppress"
  >
    <div
      class=""
    >
      <a
        class="fakeLink"
        to="[object Object]"
      >
        something
      </a>
    </div>
  </div>
</DocumentFragment>
`;
